FINALLY fixed invisible audio
I may be retarded.

--- a/style.css
+++ b/style.css
@@ -177,7 +177,9 @@ body {
   font-size: 18px;
 }
 
-
+.invis-audio {
+  visibility: hidden;
+}
 
 
 
